--- a/sass-boilerplate/stylesheets/main.scss
+++ b/sass-boilerplate/stylesheets/main.scss
@@ -26,7 +26,8 @@
 // 6. Page-specific styles
 @import 'pages/home',
 'pages/worldwildlife',
-'pages/worldwildlifearctic';
+'pages/worldwildlifearctic',
+'pages/worldwildlifespecies';
 
 // 7. Themes
 @import 'themes/default';
