--- a/sass-boilerplate/stylesheets/pages/_worldwildlifearctic.scss
+++ b/sass-boilerplate/stylesheets/pages/_worldwildlifearctic.scss
@@ -1,556 +1,290 @@
-.nav-push-left > li.nav-arctic {
-  > a {
-    color: black;
-  }
-}
-
-.nav-push-right > li.nav-arctic {
-
-  // @extend %flex-center;
-  > a {
-    color: black;
-  }
-}
-
-.help-project-section {
-  background-image: url("images/background/WWF_Catalog_2020_LG_Cover__GRAY50.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-
-
-  .row {
-    @extend %flex-center;
-  }
-
-  .help-project {
-    padding: 30px;
-    text-align: center;
-
-    h2 {
-      display: inline-block;
-      padding: 0.5em;
-      @include fonts(18px, bold, white);
-      background-color: $dark-orange;
-      text-transform: uppercase;
-      margin-bottom: 1%;
-    }
-
-    p {
-      @include fonts(15px, bold, black);
-      margin: 0;
-      padding-top: 15px;
-    }
-  }
-
-  .down-header-content {
-    display: none;
-    padding-top: 20px;
-
-    .hdr h1 {
-      margin: 0 0 15px;
-      @include fonts(32px, bold, $main-text-color);
-      text-transform: uppercase;
-    }
-
-    p {
-      @include fonts(17px, normal, $main-text-color);
-
-    }
-  }
-}
-
-@media (max-width: 640px) {
-  .help-project-section {
-    background-image: none;
-
-    .down-header-content {
-      display: block;
-    }
-  }
-
-
-}
-
-@media (max-width: 768px) {
-  .help-project-section {
-    .help-project {
-      h2 {
-        background-color: black;
-        font-size: 15px;
-      }
-
-      p {
-        font-weight: normal;
-      }
-    }
-  }
-}
-
-/* GRID-SRCTION  */
-
-.grid-card-species-section {
-
-  a {
-    text-decoration: none;
-  }
-
-  .container > .row {
-    display: flex;
-    justify-content: center;
-  }
-
-  .text-content {
-    margin-top: 40px;
-    @extend %flex-center;
-
-    p {
-      padding-left: 2%;
-      padding-bottom: 6%;
-      padding-right: 2%;
-      @include fonts(15px, normal, $main-text-color);
-      line-height: 24px;
-    }
-  }
-
-  .grid-card-species {
-    //background-color: #e50050;
-    margin-bottom: 40px;
-    padding-bottom: 70px;
-    display: grid;
-    grid-template-columns: repeat(2, 50vw);
-    grid-template-rows: repeat(8, 40vw);
-
-  }
-
-  @media (min-width: 640px) {
-
-    .grid-card-species {
-      grid-template-columns: repeat(3, 35vw);
-      grid-template-rows: repeat(5, 25vw);
-    }
-
-  }
-
-  @media (min-width: 1000px) {
-
-    .grid-card-species {
-      grid-template-columns: repeat(4, 250px);
-      grid-template-rows: repeat(6, 250px);
-
-    }
-
-    a:nth-child(1) {
-      grid-column: 1/2;
-      grid-row: 1/3;
-
-    }
-
-    a:nth-child(2) {
-      grid-column: 2/3;
-      grid-row: 1/2;
-    }
-
-    a:nth-child(3) {
-      grid-column: 3/5;
-      grid-row: 1/3;
-    }
-
-    a:nth-child(4) {
-      grid-column: 2/3;
-      grid-row: 2/4;
-    }
-
-    a:nth-child(6) {
-      grid-column: 3/5;
-      grid-row: 3/4;
-    }
-
-    a:nth-child(9) {
-      grid-column: 3/5;
-      grid-row: 4/5;
-    }
-
-    a:nth-child(11) {
-      grid-column: 2/4;
-      grid-row: 5/6;
-    }
-
-    a:nth-child(14) {
-      grid-column: 2/4;
-      grid-row: 6/7;
-    }
-  }
-
-  .grid-card-content {
-    width: 100%;
-    @extend %flex-center;
-    opacity: 0;
-    transition: 0.25s;
-    flex-direction: column;
-
-    p {
-      text-transform: uppercase;
-      @include fonts(32px, 400, white);
-      font-family: WfWebfont;
-      line-height: 1;
-      text-shadow: 2px 2px 0 #312626;
-    }
-
-    .arrow {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background: $dark-orange;
-      @include fonts(28px, bold, white);
-      @extend %flex-center;
-    }
-  }
-
-
-  .grid-card-item {
-    height: 100%;
-    @extend %flex-center;
-
-    //transition: 1s;
-    position: relative;
-
-
-    &:after {
-      content: " ";
-      position: absolute;
-      //display: block;
-      width: 100%;
-      height: 100%;
-      background: url("images/background/bg-overlay-pattern-909bb457df087b9ceb234d2afef206a1ae0c34a6f1db73267c87c7666f52037a.png");
-      opacity: 0;
-      transition: 0.25s;
-
-    }
-
-    &:hover {
-      &:after {
-        opacity: 1;
-        transition: 0.25s;
-      }
-
-      .grid-card-content {
-        opacity: 1;
-        transition: 0.25s;
-        z-index: 1;
-      }
-
-    }
-
-  }
-
-
-  @for $i from 1 through 15 {
-    .#{$class-name}-#{$i} {
-      background-image: url("images/gridcardspecies/#{$class-name}-#{$i}.jpg");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center center;
-    }
-  }
-
-
-}
-
-/*CARDS*/
-
-.circle-card-section {
-
-  .circle-card-marineanimals, .circle-card-primates, .circle-card-bigcats {
-
-    color: $main-text-color;
-    text-align: center;
-    padding: 40px 50px;
-    overflow: hidden;
-    position: relative;
-
-    .card-title {
-      font-size: 16px;
-      font-weight: bold;
-      line-height: 40px;
-      text-transform: uppercase;
-      margin: 35px;
-
-      &:after, &:before {
-        background: rgba(80, 55, 55, 0.15);
-        content: "";
-        display: block;
-        height: 6px;
-        margin: 0 auto;
-        width: 80px;
-      }
-    }
-
-    .circle-card-pillars {
-      display: flex;
-      justify-content: flex-start;
-
-      //justify-content: space-between;
-      //  flex-wrap: wrap;
-      /*  margin-left: -200px;*/
-      transition: margin-left 1s, margin-right 1s;
-
-      .circle-card-item {
-
-        margin: 10px;
-
-        a {
-          @include fonts(13px, bold, $blue-links);
-          text-transform: uppercase;
-          padding: 10px 0;
-        }
-      }
-    }
-
-    .arrow {
-      position: absolute;
-      border: none;
-      width: 50px;
-      height: 229px;
-      background: rgb(255, 255, 255, 0.3);
-      @include fonts(45px, bold, $blue-links);
-
-      &:focus {
-        outline: none;
-      }
-    }
-
-    .prev {
-      left: 0px;
-      box-shadow: 6px 0 5px -5px rgba(0, 0, 0, 0.35);
-      background-image: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0.5));
-
-      span {
-        transition: 0.25s;
-      }
-
-      &:hover {
-        span {
-          margin-right: 20px;
-          color: $blue-menu;
-          transition: 0.25s;
-        }
-      }
-    }
-
-    .next {
-      right: 0px;
-      box-shadow: -6px 0 5px -5px rgba(0, 0, 0, 0.35);
-      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgb(255, 255, 255));
-
-      span {
-        transition: 0.25s;
-      }
-
-      &:hover {
-        span {
-          margin-left: 20px;
-          color: $blue-menu;
-          transition: 0.25s;
-        }
-      }
-    }
-
-  }
-
-
-  .circle-card-marineanimals {
-
-
-    @for $i from 1 through 13 {
-      .#{$class-name-circle}-#{$i} {
-
-        // background: #6f42c1;
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        background-image: url("images/circlecardmarineanimals/#{$class-name-circle}-#{$i}.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-      }
-    }
-
-  }
-
-  .circle-card-primates {
-
-
-    @for $i from 1 through 6 {
-      .#{$class-name-circle}-#{$i} {
-
-        // background: #6f42c1;
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        background-image: url("images/circlecardprimates/#{$class-name-circle}-#{$i}.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-      }
-    }
-
-    /*@media (min-width: 1140px) {
-
-      .arrow{
-        display: none;
-      }
-      
-    }*/
-
-  }
-
-  .circle-card-bigcats {
-
-
-    @for $i from 1 through 5 {
-      .#{$class-name-circle}-#{$i} {
-
-        // background: #6f42c1;
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        background-image: url("images/circlecardbigcats/#{$class-name-circle}-#{$i}.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-      }
-    }
-
+.container-nav-progress-bar {
+  width: 100%;
+  height: 5px;
+  background: #ccc;
+  position: absolute;
+
+  .progress-bar {
+    height: 5px;
+    background: #d77640;
+    width: 0%;
   }
 
 }
 
+.sticky-menu-acrtic {
+  background: black;
 
-.grid-species-section {
+  .active {
+    color: white;
+  }
+
   .container {
     display: flex;
-    justify-content: center;
-    margin-bottom: 10%;
+    justify-content: space-around;
+    align-items: center;
   }
 
-  .grid-species {
-    display: grid;
-    grid-template-columns: repeat(3, 320px);
-    grid-template-rows: repeat(1, 320px);
-    grid-gap: 10px;
+  a {
+    @include fonts(15px, 400, #808080);
+    line-height: 50px;
+    padding: 5px 10px;
   }
 
-  @media (max-width: 1000px) {
-    .grid-species {
-      grid-template-columns: repeat(3, 32vw);
-      grid-template-rows: repeat(1, 32vw);
+  .nav-title {
+    @include fonts(15px, 700, white);
+    line-height: 50px;
+    padding: 5px 10px;
+    background: $main-text-color;
+    //flex: 20%;
+  }
+
+  @media (max-width: 900px) {
+
+    .nav-title {
+      display: none;
     }
+
   }
 
-  @media (max-width: 640px) {
-    .grid-species {
-      grid-template-columns: repeat(1, 320px);
-      grid-template-rows: repeat(3, 320px);
+  .nav-links {
+    // width: 90%;
+    position: relative;
+    flex: 50%;
+
+
+    ul.nav.nav-active {
+      display: flex;
+      justify-content: space-between;
+      padding: 0 10px;
+      flex-wrap: nowrap;
     }
-  }
 
- /* @media (max-width: 480px) {
-    .grid-card-item {
+    a {
+      transition: 0.25s;
 
-      img {
-        display: none
+      &:hover {
+        color: white;
+        transition: 0.25s;
       }
     }
-  }*/
 
-  .grid-card-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  }
 
-    img {
-      width: 100%;
-      height: 100%;
+  .nav-button {
+    margin-left: 10px;
+
+    a {
+      background: $dark-orange;
+      @include fonts(15px, bold, white);
+      text-transform: uppercase;
+      line-height: 40px;
+      padding: 0 15px;
+      border-radius: 2px;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
 
   }
 
-  .grid-card-1 {
-
-    #grid-species-form {
-      @extend %flex-center;
-
-    }
-
-    label {
-      @extend %flex-center;
-      flex-direction: column;
-      position: relative;
-    }
-
-    input {
-      height: 38px;
-      width: 100%;
-    }
-
-    input::placeholder {
-      font-style: italic;
+  @media (max-width: 840px) {
+    a, .nav-button a {
       font-size: 13px;
     }
 
-    button {
+    a {
+      line-height: 25px;
+    }
+  }
+}
+
+.arctic-section-header {
+  text-align: center;
+  margin-bottom: 50px;
+
+  .hdr {
+    position: relative;
+
+    .bg-facts {
+      background: url("images/background/bg-patterned-checked-51cb0afb5e9111aef8529ce1f6d871eb1694b6db4c2630db50bd0a5a7c4c357b.jpg") repeat;
+    }
+
+    &:before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 3px;
       position: absolute;
-      right: 10px;
-      bottom: 3px;
-      width: 32px;
-      height: 32px;
-      background: #312626;
-      border: none;
-      border-radius: 50%;
+      top: 50%;
+      left: 0;
+      margin-top: -2px;
+      z-index: 1;
+      border: 1px solid #e2dfd7;
+    }
+
+    span {
+      font-family: 'WfWebfont';
+      @include fonts(48px, 400, $main-text-color);
+      text-transform: uppercase;
+      padding: 0 18px;
+      position: relative;
+      z-index: 2;
+      text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.07);
+
+    }
+  }
+
+}
+
+.arctic-facts-section {
+  background: url("images/background/bg-patterned-checked-51cb0afb5e9111aef8529ce1f6d871eb1694b6db4c2630db50bd0a5a7c4c357b.jpg") repeat;
+  padding: 70px 0;
+
+  .wrapper-facts {
+    background: white;
+    padding: 4% 2% 6%;
+    position: relative;
+    z-index: 1;
+
+    &:before {
+      border: 10px solid #fff;
+      bottom: -14px;
+      -moz-box-shadow: 0 0 25px rgba(109, 85, 66, 0.1);
+      -webkit-box-shadow: 0 0 25px rgba(109, 85, 66, 0.1);
+      box-shadow: 0 0 25px rgba(109, 85, 66, 0.1);
+      content: "";
+      left: -14px;
+      position: absolute;
+      top: -14px;
+      right: -14px;
+      z-index: -1;
+    }
+
+    p {
+      @include fonts(15px, normal, $main-text-color);
+      margin-bottom: 1.25em;
+      // word-wrap: break-word;
+
+    }
+
+    .facts-img {
+      float: right;
+      padding: 2% 3%;
+
+      .earth-img, .elephant-img {
+        display: flex;
+        padding: 8px 0;
+
+        img {
+          width: 42px;
+          height: 42px;
+        }
+
+        .hdr {
+
+          padding-left: 5px;
+
+          p {
+            @include fonts(12px, 400, #777);
+            line-height: 19px;
+
+            margin: 0;
+          }
+
+          p:nth-child(1) {
+            text-transform: uppercase;
+            @include fonts(11px, bold, #777);
+          }
+        }
+      }
+
+    }
+  }
+
+  .share-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1% 0;
+    margin-bottom: 2%;
+    @include fonts(11px, 500, white);
+
+
+    .twitter, .facebook {
+      margin: 0 10px;
+      // position: relative;
+      height: 20px;
+      box-sizing: border-box;
+      padding: 1px 8px 1px 6px;
+      background-color: #1b95e0;
+      color: #fff;
+      border-radius: 3px;
+      font-weight: 500;
+      cursor: pointer;
 
       svg {
-        color: white;
+        width: 14px;
+        height: 14px;
+      }
+    }
+
+    .facebook {
+      background-color: #1877f2;
+    }
+
+    .mail {
+      svg {
+        color: #006ea5;
+        width: 24px;
+        // height: 24px;
       }
     }
 
   }
 
-  .grid-card-2, .grid-card-3 {
+  .lead {
+    display: flex;
+    flex-direction: column;
 
+    span:nth-child(1) {
+      @include fonts(12px, bold, $main-text-color);
+    }
+
+  }
+
+  span:nth-child(2) {
+    a{
+      @include fonts(15px, normal, $blue-links);
+    }
+
+  }
+
+  .btn-push-left {
+    left: -37px;
     position: relative;
 
-    .btn-species {
-      position: absolute;
-      bottom: 10px;
-      right: 8px;
-      padding: 9px 15px 9px 15px;
-      background: black;
-      @include fonts(12px, bold, white);
-      font-style: italic;
-      text-transform: uppercase;
+    .btn-simple {
+      padding-top: 2%;
 
-      span {
-        margin-left: 10px;
-        font-size: 15px;
-        transition: 0.25s;
-      }
+      a {
+        background: black;
+        @include fonts(12px, bold, white);
+        font-style: italic;
+        padding: 11px 15px 11px 15px;
+        text-transform: uppercase;
+        transition: 0.25s ease-in-out;
+        line-height: 28px;
+        text-decoration: none;
+        letter-spacing: 0.1px;
 
-      &:hover {
-        span {
+        &:hover {
           color: $blue-links;
-          transition: 0.25s;
         }
+
       }
     }
-
-    .promo-text {
-      position: absolute;
-      @include fonts(13px, bold, black);
-      padding: 5px;
-      text-align: center;
-    }
-
   }
 
 }
