--- a/sass-boilerplate/stylesheets/pages/_worldwildlifearctic.scss
+++ b/sass-boilerplate/stylesheets/pages/_worldwildlifearctic.scss
@@ -1,7 +1,7 @@
 .container-nav-progress-bar {
   width: 100%;
   height: 5px;
-  background: #ccc;
+  background: black;
   position: absolute;
 
   .progress-bar {
@@ -12,14 +12,120 @@
 
 }
 
+.nav-horiz-top {
+  // display: none;
+  position: absolute;
+  left: 100px;
+  top: 150px;
+  background: black;
+  color: white;
+
+
+  a {
+    @include fonts(12px, bold, white);
+    text-transform: uppercase;
+    //line-height: 35px;
+    display: inline-block;
+    padding: 0 15px;
+    text-decoration: none;
+
+    svg {
+      color: white;
+      width: 15px;
+      transition: 0.25s;
+    }
+
+    &:hover {
+      svg {
+        color: $blue-menu;
+      }
+    }
+  }
+
+  a:nth-child(1) {
+    transition: 0.25s;
+
+    &:hover {
+      background: #383838;
+    }
+  }
+}
+
+.nav-horiz-bottom{
+  display: none;
+}
+
+@media (max-width: 660px){
+  .nav-horiz-bottom {
+     display: block;
+    position: absolute;
+    bottom: -30px;
+    z-index: 5;
+    width: 100%;
+    background: black;
+    color: white;
+
+
+    a {
+      @include fonts(12px, bold, white);
+      text-transform: uppercase;
+      //line-height: 35px;
+      display: inline-block;
+      padding: 0 15px;
+      text-decoration: none;
+
+      svg {
+        color: white;
+        width: 15px;
+        transition: 0.25s;
+      }
+
+      &:hover {
+        svg {
+          color: $blue-menu;
+        }
+      }
+    }
+
+    a:nth-child(1) {
+      transition: 0.25s;
+
+      &:hover {
+        background: #383838;
+      }
+    }
+  }
+}
+
+
+
+/*@media (max-width: 660px) {
+  !* .nav-links {
+     ul.nav.nav-active.nav-horiz {
+       display: none;
+     }
+   }
+
+   .nav-button {
+     display: none;
+   }*!
+
+
+  .nav-horiz-top {
+    display: flex;
+  }
+
+}*/
+
 .sticky-menu-acrtic {
   background: black;
-
+z-index: 3;
   .active {
     color: white;
   }
 
   .container {
+    max-width: 1040px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -39,12 +145,32 @@
     //flex: 20%;
   }
 
+   .nav-horiz-sticky{
+     display: none;
+     justify-content: space-between;
+
+     a{
+       @include fonts(13px, 400, white);
+       line-height: 35px;
+       svg{
+         color: white;
+         width: 15px;
+         transition: 0.25s;
+       }
+
+     }
+
+   }
+
   @media (max-width: 900px) {
 
     .nav-title {
       display: none;
     }
 
+    .container {
+      padding: 0;
+    }
   }
 
   .nav-links {
@@ -53,7 +179,7 @@
     flex: 50%;
 
 
-    ul.nav.nav-active {
+    ul.nav.nav-active.nav-horiz {
       display: flex;
       justify-content: space-between;
       padding: 0 10px;
@@ -68,6 +194,24 @@
         transition: 0.25s;
       }
     }
+
+  }
+
+  @media (max-width: 660px) {
+    .nav-links {
+      ul.nav.nav-active.nav-horiz {
+        display: none;
+      }
+    }
+
+    .nav-button {
+      display: none;
+    }
+
+
+     .nav-horiz-sticky{
+       display: flex;
+     }
 
   }
 
@@ -138,6 +282,36 @@
 
 }
 
+.arctic-section-subheader {
+
+  text-align: center;
+  padding-bottom: 40px;
+  overflow: hidden;
+  position: relative;
+
+  .title {
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 40px;
+    text-transform: uppercase;
+    color: $blue-links;
+    transition: 0.25s;
+
+    &:hover {
+      color: $blue-menu;
+    }
+
+    &:after, &:before {
+      background: rgba(80, 55, 55, 0.15);
+      content: "";
+      display: block;
+      height: 6px;
+      margin: 0 auto;
+      width: 80px;
+    }
+  }
+}
+
 .arctic-facts-section {
   background: url("images/background/bg-patterned-checked-51cb0afb5e9111aef8529ce1f6d871eb1694b6db4c2630db50bd0a5a7c4c357b.jpg") repeat;
   padding: 70px 0;
@@ -165,13 +339,18 @@
     p {
       @include fonts(15px, normal, $main-text-color);
       margin-bottom: 1.25em;
-      // word-wrap: break-word;
-
+      word-wrap: break-word;
+      line-height: 24px;
     }
+
 
     .facts-img {
       float: right;
       padding: 2% 3%;
+
+      img {
+        width: 100%;
+      }
 
       .earth-img, .elephant-img {
         display: flex;
@@ -189,7 +368,7 @@
           p {
             @include fonts(12px, 400, #777);
             line-height: 19px;
-
+            line-height: 24px;
             margin: 0;
           }
 
@@ -200,6 +379,12 @@
         }
       }
 
+    }
+
+    @media (max-width: 640px) {
+      .facts-img {
+        float: none;
+      }
     }
   }
 
@@ -236,7 +421,7 @@
 
     .mail {
       svg {
-        color: #006ea5;
+        color: $blue-links;
         width: 24px;
         // height: 24px;
       }
@@ -255,7 +440,7 @@
   }
 
   span:nth-child(2) {
-    a{
+    a {
       @include fonts(15px, normal, $blue-links);
     }
 
@@ -285,6 +470,741 @@
 
       }
     }
+  }
+
+}
+
+.shaded-light-section {
+
+  background: #f6f5f2;
+
+  .container {
+    padding: 4% 3%;
+
+    .col-md-8 {
+      padding: 3% 2% 0 2%;
+    }
+  }
+
+  .hdr {
+    a {
+      @include fonts(36px, 400, $blue-links);
+      transition: 0.25s;
+
+      &:hover {
+        color: $blue-menu;
+      }
+    }
+  }
+
+  p {
+    @include fonts(15px, normal, $main-text-color);
+    margin-bottom: 1.25em;
+    word-wrap: break-word;
+    line-height: 24px;
+  }
+
+  .btn-simple, .btn-unstyled {
+    padding-top: 2%;
+
+    a {
+
+      @include fonts(12px, bold, white);
+      font-style: italic;
+      padding: 11px 15px 11px 15px;
+      text-transform: uppercase;
+      transition: 0.25s ease-in-out;
+      line-height: 28px;
+      text-decoration: none;
+      letter-spacing: 0.1px;
+
+      &:hover {
+        color: $blue-links;
+      }
+
+    }
+  }
+
+  .btn-simple {
+    a {
+      background: black;
+    }
+  }
+
+  .btn-unstyled {
+    a {
+      color: $blue-links;
+
+      &:hover {
+        color: $blue-menu;
+      }
+    }
+  }
+}
+
+.arctic-species-section {
+
+  padding: 70px 0;
+
+  .bg-white {
+    background: white;
+  }
+
+
+  .circle-card-species {
+
+    color: $main-text-color;
+    text-align: center;
+    padding: 40px 50px;
+    overflow: hidden;
+    position: relative;
+
+    .circle-card-pillars {
+      display: flex;
+      justify-content: flex-start;
+
+      //justify-content: space-between;
+      //  flex-wrap: wrap;
+      /*  margin-left: -200px;*/
+      transition: margin-left 1s, margin-right 1s;
+
+      .circle-card-item {
+
+        margin: 10px;
+
+        a {
+          @include fonts(13px, bold, $blue-links);
+          text-transform: uppercase;
+          padding: 10px 0;
+        }
+      }
+    }
+
+    .arrow {
+      position: absolute;
+      border: none;
+      width: 50px;
+      height: 229px;
+      background: rgb(255, 255, 255, 0.3);
+      @include fonts(45px, bold, $blue-links);
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .prev {
+      left: 0px;
+      box-shadow: 6px 0 5px -5px rgba(0, 0, 0, 0.35);
+      background-image: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0.5));
+
+      span {
+        transition: 0.25s;
+      }
+
+      &:hover {
+        span {
+          margin-right: 20px;
+          color: $blue-menu;
+          transition: 0.25s;
+        }
+      }
+    }
+
+    .next {
+      right: 0px;
+      box-shadow: -6px 0 5px -5px rgba(0, 0, 0, 0.35);
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgb(255, 255, 255));
+
+      span {
+        transition: 0.25s;
+      }
+
+      &:hover {
+        span {
+          margin-left: 20px;
+          color: $blue-menu;
+          transition: 0.25s;
+        }
+      }
+    }
+  }
+
+  .circle-card-species {
+
+
+    @for $i from 1 through 13 {
+      .#{$class-name-circle}-#{$i} {
+
+        // background: #6f42c1;
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background-image: url("images/circlecardspecies/#{$class-name-circle}-#{$i}.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+      }
+    }
+
+
+  }
+
+}
+
+.arctic-people-section, .arctic-wwf-section {
+
+  padding: 70px 0;
+
+  .bg-white {
+    background: white;
+  }
+
+  p {
+    @include fonts(15px, normal, $main-text-color);
+    margin-bottom: 1.25em;
+    word-wrap: break-word;
+    line-height: 24px;
+  }
+
+  .wrapper-people, .wrapper-wwf {
+    display: flex;
+    @extend %flex-center;
+    flex-direction: column;
+  }
+
+  .people-img, .wwf-img {
+    img {
+      width: 100%;
+    }
+  }
+
+  .people-text, .wwf-text {
+    // @extend %flex-center;
+    display: flex;
+    justify-items: center;
+    align-items: flex-start;
+    max-width: 1000px;
+    margin-top: 2%;
+    //flex-direction: column;
+
+    .main-text {
+      flex: 7;
+    }
+
+    .sub-text {
+      flex: 3;
+    }
+
+  }
+
+  @media (max-width: 640px) {
+
+    .people-text, .wwf-text {
+      display: flex;
+      flex-direction: column;
+
+      .main-text {
+        order: 2;
+      }
+
+      .sub-text {
+        margin-left: 0;
+      }
+    }
+
+  }
+
+  .main-text {
+    h3 {
+      @include fonts(15px, bold, $main-text-color);
+      text-transform: uppercase;
+    }
+
+    p {
+      a {
+        color: $blue-menu;
+      }
+    }
+  }
+
+  .sub-text {
+    padding: 1%;
+    border: 1px solid #e2dfd7;
+    background: #f6f5f2;
+    margin-bottom: 20px;
+    margin-left: 20px;
+
+    .header {
+      text-align: center;
+      padding-bottom: 20px;
+    }
+
+
+    a.hdr {
+      @include fonts(21px, bold, $blue-links);
+      text-transform: uppercase;
+
+    }
+
+    a.link {
+      @include fonts(15px, bold, $blue-links);
+    }
+
+    a {
+      transition: 0.25s;
+
+      &:hover {
+        color: $blue-menu;
+      }
+    }
+
+  }
+
+}
+
+.arctic-threats-section {
+
+  padding: 70px 0;
+  background: #222 url("images/background/bg-dark-patterned-25ffd5decf37fe354a515b94e84b82763a8d0379f917edc3829a9eed362145d0.jpg");
+
+  .bg-threats {
+    background: #222 url("images/background/bg-dark-patterned-25ffd5decf37fe354a515b94e84b82763a8d0379f917edc3829a9eed362145d0.jpg");
+  }
+
+  p {
+    @include fonts(15px, normal, #ccc);
+    margin-bottom: 1.25em;
+    word-wrap: break-word;
+    line-height: 24px;
+  }
+
+  .arctic-section-header {
+    .hdr {
+      &:before {
+        border: 1px solid #333;
+      }
+
+      span {
+        @include fonts(48px, 400, white);
+      }
+    }
+  }
+
+  .wrapper-threats {
+    // max-width: 1000px;
+  }
+
+  .main-text {
+    min-height: 210px;
+    margin-top: 10px;
+
+    p.float-text {
+      //  width: 70%;
+    }
+  }
+
+  .flex-text {
+    display: flex;
+
+    .main-text {
+      flex: 7;
+    }
+
+    .sub-text {
+      flex: 3;
+
+    }
+  }
+
+  .sub-text {
+
+
+    margin-bottom: 20px;
+    margin-left: 20px;
+
+    .sub-text-wrapper {
+      border: 3px solid #373737;
+      padding: 4%;
+      position: relative;
+
+      &:before {
+        content: "";
+        background: #de3831;
+        display: block;
+        height: 6px;
+        left: 50%;
+        margin-left: -10px;
+        position: absolute;
+        width: 20px;
+        top: -2px;
+      }
+
+      &:after {
+        content: "";
+        background: #de3831;
+        display: block;
+        height: 6px;
+        left: 50%;
+        margin-left: -10px;
+        position: absolute;
+        width: 20px;
+        bottom: -2px;
+      }
+    }
+  }
+
+  .hdr-center {
+    text-align: center;
+    padding-bottom: 20px;
+
+
+    h3 {
+      @include fonts(21px, bold, white);
+      text-transform: uppercase;
+    }
+  }
+
+  .hdr {
+    @include fonts(15px, bold, white);
+    text-transform: uppercase;
+  }
+
+  .header {
+    @include fonts(15px, bold, #de3831);
+    text-transform: uppercase;
+  }
+
+  img {
+    float: right;
+    // clear: both;
+    margin-left: 2%;
+    margin-bottom: 2%;
+    padding: 0 3%;
+
+  }
+
+  @media (max-width: 640px) {
+    img {
+      float: none;
+      width: 100%;
+    }
+
+    .flex-text {
+      // display: flex;
+      flex-direction: column;
+
+      .main-text {
+        //flex: 7;
+        order: 2;
+      }
+
+      .sub-text {
+        //flex: 3;
+        order: 1;
+
+      }
+    }
+  }
+
+}
+
+.arctic-wwf-section {
+
+
+  //#f6f5f3
+
+  .container {
+    // display: flex;
+    //flex-direction: column;
+    // justify-content: center;
+    //align-items: center;
+    // text-align: center;
+  }
+
+  .wrapper-wwf, .wrapper-news, .wrapper-projects, .wrapper-publications, .wrapper-experts {
+    margin-bottom: 5%;
+    // min-width: 1000px;
+    // margin: 0 auto;
+    // max-width: 1000px;
+    /*    display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;*/
+  }
+
+  .wrapper-news {
+    border: 15px solid #f6f5f3;
+    padding: 3%;
+
+    .releases {
+      padding-bottom: 40px;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .line-dotted-news {
+      border-bottom: 1px dotted darkgray;
+      padding-bottom: 8px;
+      padding-top: 8px;
+    }
+
+    a {
+      @include fonts(13px, 400, $blue-menu);
+
+    }
+
+    a.push-right {
+      font-size: 15px;
+    }
+
+    h2 {
+      @include fonts(20px, 400, $main-text-color);
+      margin: 0;
+    }
+
+    .details {
+
+      @include fonts(12px, 400, $main-text-color);
+      font-style: italic;
+    }
+  }
+
+  .wrapper-projects {
+
+    .projects-row {
+      display: flex;
+
+      .projects-col {
+        flex: 1;
+        padding: 0 2%;
+      }
+    }
+
+    a {
+      @include fonts(15px, bold, $blue-links);
+      transition: 0.25s;
+
+      &:hover {
+        color: $blue-menu;
+      }
+    }
+
+    @media (max-width: 640px) {
+      .projects-row {
+        flex-direction: column;
+      }
+    }
+
+  }
+
+  .wrapper-publications {
+
+    .row {
+      a {
+        @include fonts(15px, bold, $blue-links);
+        transition: 0.25s;
+        display: block;
+        margin: 0;
+        padding: 5px;
+        line-height: 20px;
+
+        &:hover {
+          color: $blue-menu;
+        }
+      }
+    }
+
+
+    .item-img {
+
+      position: relative;
+
+      &:after {
+        content: "";
+        position: absolute;
+        display: block;
+        background-image: url("images/background/arcticsection/publications/transparent-s06b906659d-1b52e2a954cce64eb6c59f448a762d9369be2621dd6cdb24958379f21bc49b4a.png");
+        background-repeat: no-repeat;
+        background-position: 0 -135px;
+        //background: black;
+        width: 150px;
+        height: 200px;
+        z-index: 1;
+        top: 0;
+        //left: 2px;
+      }
+
+      &:before {
+        content: "";
+        position: absolute;
+        display: block;
+        background-image: url("images/background/arcticsection/publications/transparent-s06b906659d-1b52e2a954cce64eb6c59f448a762d9369be2621dd6cdb24958379f21bc49b4a.png");
+        background-repeat: no-repeat;
+        background-position: 5px -900px;
+        width: 20px;
+        height: 15px;
+        z-index: 1;
+        bottom: 10px;
+        left: 120px;
+      }
+
+    }
+
+
+    .btn-push-left {
+      left: 15px;
+      position: relative;
+
+      .btn-simple {
+        padding-top: 2%;
+
+        a {
+          background: black;
+          @include fonts(12px, bold, white);
+          font-style: italic;
+          padding: 11px 15px 11px 15px;
+          text-transform: uppercase;
+          transition: 0.25s ease-in-out;
+          line-height: 28px;
+          text-decoration: none;
+          letter-spacing: 0.1px;
+
+          &:hover {
+            color: $blue-links;
+          }
+
+        }
+      }
+    }
+
+  }
+
+  .wrapper-experts {
+
+    .item-experts a {
+      display: flex;
+      //flex-direction: column;
+      color: $blue-links;
+    }
+
+    .details {
+
+      @include fonts(12px, 400, $main-text-color);
+      font-style: italic;
+    }
+
+    .hdr {
+      @include fonts(12px, bold, $blue-links);
+      text-transform: uppercase;
+    }
+
+    .img-experts {
+      margin-right: 20px;
+    }
+
+  }
+
+}
+
+.arctic-canhelp-section {
+  padding-bottom: 70px;
+  background: url("images/background/bg-patterned-e2dd5fbf93d51984d5fcff9b9c1e9006810dbbdf4ba42186bf705b016ee280bd.png");
+
+  .bg-blue {
+    background: url("images/background/bg-patterned-e2dd5fbf93d51984d5fcff9b9c1e9006810dbbdf4ba42186bf705b016ee280bd.png");;
+  }
+
+  .canhelp-wrapper > a {
+    flex: 1;
+    margin: 0 1%;
+    text-decoration: none;
+    transition: 0.25s;
+
+    &:hover {
+      p {
+        color: $blue-menu;
+      }
+    }
+  }
+
+  .canhelp-wrapper {
+    display: flex;
+
+
+    .canhelp-item {
+      display: flex;
+
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+
+      .text-content, .canhelp-img {
+        flex: 1;
+      }
+
+    }
+
+  }
+
+  .canhelp-item {
+    img {
+      float: right;
+      width: 100%;
+    }
+  }
+
+  .hdr {
+    h3 {
+      @include fonts(30px, 400, $blue-links);
+      text-transform: uppercase;
+      font-family: WfWebfont;
+    }
+  }
+
+  .text-content {
+    padding: 0 4%;
+    margin: 10px 0;
+  }
+
+  p {
+    @include fonts(13px, normal, $main-text-color);
+    margin-bottom: 1.25em;
+    word-wrap: break-word;
+    line-height: 19px;
+  }
+
+  @media (max-width: 830px) {
+    .canhelp-wrapper {
+
+      .canhelp-item {
+        flex-direction: column;
+      }
+
+      .text-content {
+        min-height: 140px;
+      }
+
+    }
+
+    .canhelp-item {
+      img {
+        float: none;
+        // width: 100%;
+      }
+    }
+  }
+
+  @media (max-width: 440px) {
+    .canhelp-wrapper {
+      flex-direction: column;
+
+      .text-content {
+        min-height: auto;
+      }
+    }
+
   }
 
 }
